k8s/booking.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking
spec:
  replicas: 2
  selector:
    matchLabels:
      app: booking
  template:
    metadata:
      labels:
        app: booking
    spec:
      containers:
        - name: booking
          image: fiks-booking:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: booking
spec:
  selector:
    app: booking
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
