k8s/catalog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: catalog
  template:
    metadata:
      labels:
        app: catalog
    spec:
      containers:
        - name: catalog
          image: fiks-catalog:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: catalog
spec:
  selector:
    app: catalog
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
