k8s/feedback.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedback
spec:
  replicas: 2
  selector:
    matchLabels:
      app: feedback
  template:
    metadata:
      labels:
        app: feedback
    spec:
      containers:
        - name: feedback
          image: fiks-feedback:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3004
---
apiVersion: v1
kind: Service
metadata:
  name: feedback
spec:
  selector:
    app: feedback
  ports:
    - protocol: TCP
      port: 3004
      targetPort: 3004
