k8s/identity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity
spec:
  replicas: 2
  selector:
    matchLabels:
      app: identity
  template:
    metadata:
      labels:
        app: identity
    spec:
      containers:
        - name: identity
          image: fiks-identity:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: identity
spec:
  selector:
    app: identity
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
