k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fiks-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # Identity Service
          - path: /api/auth/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: identity
                port:
                  number: 3001
          
          # Catalog Service
          - path: /api/v1/catalog/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: catalog
                port:
                  number: 3002

          # Booking Service
          - path: /api/v1/booking/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: booking
                port:
                  number: 3003

          # Feedback Service
          - path: /api/v1/feedback/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: feedback
                port:
                  number: 3004

          # Frontend
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 80
